--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -3,32 +3,62 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
+/* common css */
+
+hr {
+    color: #D1D1D1 ;
+}
+
+h3 {
+    margin: 20px 0px;
+}
+
+.section-title {
+    color: #181818;
+    font-size: 35px;
+    font-weight: 700;
+    text-align: center;
+}
+
+.section-paragraph {
+    color: #757575;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    text-align: center;
+}
+
+main section {
+    margin-top: 130px;
+}
+
 /* Nav css */
 
 nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 200px;
 }
 
 .nav-title .ma {
 
- color: #181818;
- font-size: 45px;
- font-weight: 800;
+    color: #181818;
+    font-size: 45px;
+    font-weight: 800;
 
 }
 
 .nav-title .r {
- color: #FD6E0A;
- font-size: 45px;
- font-weight: 800;
+    color: #FD6E0A;
+    font-size: 45px;
+    font-weight: 800;
 }
 
 .nav-title .y {
- color: #181818;
- font-size: 45px;
- font-weight: 800;
+    color: #181818;
+    font-size: 45px;
+    font-weight: 800;
 }
 
 nav ul {
@@ -47,11 +77,196 @@ nav a {
 }
 
 .btn-primary {
-    background: #FD6E0A; 
+    background: #FD6E0A;
     border-radius: 5px;
     border: 0;
     color: white;
     font-size: 20px;
     font-weight: 700;
     padding: 18px 35px;
+}
+
+/* Header css */
+
+.header {
+    background-color: #FFF8F3;
+    background-image: url(../images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
+}
+
+.banner {
+    padding: 30px 30px 0 150px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.banner .profile-pic {
+    width: 500px;
+    ;
+}
+
+.banner-content {
+    max-width: 500px;
+}
+
+.banner-greeting {
+    color: #474747;
+    font-size: 45px;
+    font-weight: 600;
+    margin: 5px 0px;
+}
+
+.banner-title {
+    color: #181818;
+    font-size: 85px;
+    font-weight: 700;
+    margin: 10px 0px;
+}
+
+.banner p {
+    margin: 30px 0px;
+}
+
+/* main section */
+
+main {
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+/* About section */
+
+.about-section {
+    background-color: #FFF8F3;
+    border-radius: 10px;
+    padding: 130px;
+    margin: 130px 0px;
+}
+
+.about-section h3 {
+    margin: 0px;
+}
+
+.about-info-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.about-info {
+    text-align: center;
+}
+
+.info-title,
+.info-desc {
+    margin: 10px;
+}
+
+/* what i do */
+
+.wid {
+    padding: 30px 150px;
+}
+
+/* skills styles */
+
+.skill-container {
+    display: flex;
+    gap: 24px;
+
+}
+
+.skill {
+    padding: 30px;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px
+}
+
+.skill-title {
+    color: #181818;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.skill-description {
+    color: #757575;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+}
+
+/* resume section */
+
+.resume-col-title {
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.resume-container {
+    display: flex;
+    gap: 50px;
+}
+
+.resume-item {
+    margin: 30px 0px;
+}
+
+.resume-item-title {
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700;
+    margin: 0px;
+}
+
+.resume-item-intitute {
+    color: #757575;
+    font-size: 20px;
+    font-weight: 600;
+    margin-top: 5px;
+}
+
+.resume-item-desc {
+    color: #757575;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+}
+
+.download-cv {
+    text-align: center;
+    margin: 30px 0px;
+}
+
+/* footer css */
+
+footer {
+    background-color: #FFF8F3;
+    display: flex;
+    gap: 100px;
+    margin-top: 100px;
+    padding: 130px 200px;
+}
+
+.footer-column {
+    width: 50%;
+}
+
+.footer-column h3 {
+    text-align: left;
+}
+
+.social-links a {
+    margin: 0px 10px 0px 0px;
+}
+
+.contact input[type="text"], .contact input[type="email"], textarea {
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    color: #757575;
+    border: 0;
+    background-color: #fff;
+    width: 100%;
 }
